# finance-app

./: .gitignore  CC_BUILD_PACKAGE_V2.md  CUSTOMIZE_LOG.md  PM1_STARTUP_PROMPT.md  README.md  RELEASE_NOTES_v2.2.0.md  UPDATE_LOG_v2.2.0.md  copy_reference_code.bat  final_verification_results.json  package-lock.json  package.json
backend/: main.py  pyproject.toml  requirements.txt  ruff.toml
backend/data/: dow_tickers.json  russell3000_tickers.json  sp500_tickers.json
backend/db/: connection.py  init_cache_db.py  init_user_db.py
backend/engines/: __init__.py  base_model.py  comps_engine.py  dcf_engine.py  ddm_engine.py  engine_utils.py  models.py  registry.py  revbased_engine.py
backend/models/: response.py
backend/providers/: __init__.py  base.py  exceptions.py  registry.py  sec_edgar.py  yahoo_finance.py
backend/repositories/: company_repo.py  filing_repo.py  market_data_repo.py  model_repo.py  news_repo.py  portfolio_account_repo.py  portfolio_repo.py  portfolio_transaction_repo.py  price_alert_repo.py  research_repo.py  scanner_repo.py  settings_repo.py  watchlist_repo.py
backend/routers/: companies_router.py  dashboard_router.py  export_router.py  market_router.py  models_router.py  news_router.py  portfolio_router.py  research_router.py  scanner_router.py  settings_router.py  system_router.py  universe_router.py
backend/services/: backup_service.py  company_events_service.py  company_service.py  dashboard_service.py  data_extraction_service.py  data_readiness_service.py  engine_dependency_map.py  market_data_service.py  model_detection_service.py  (+9 more)
(+489 files in other folders)
